--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,37 @@
 [build]
   publish = "."
-  command = "echo 'Build simples - projeto novo'"
+  command = "echo 'FORCE REBUILD - PROJETO NOVO' && ls -la"
+
+[build.environment]
+  NODE_VERSION = "18"
 
 [[headers]]
   for = "/*"
   [headers.values]
-    Cache-Control = "no-cache, no-store, must-revalidate"
+    Cache-Control = "no-cache, no-store, must-revalidate, max-age=0"
     Pragma = "no-cache"
     Expires = "0"
     X-Content-Type-Options = "nosniff"
-    X-Frame-Options = "DENY" 
+    X-Frame-Options = "DENY"
+    X-Force-Refresh = "true"
+    X-Timestamp = "2025-01-03-15-30"
+
+[[headers]]
+  for = "*.html"
+  [headers.values]
+    Cache-Control = "no-cache, no-store, must-revalidate, max-age=0"
+    Pragma = "no-cache"
+    Expires = "0"
+
+[[headers]]
+  for = "*.js"
+  [headers.values]
+    Cache-Control = "no-cache, no-store, must-revalidate, max-age=0"
+    Pragma = "no-cache"
+    Expires = "0"
+
+[[redirects]]
+  from = "/old-system"
+  to = "/"
+  status = 301
+  force = true 
