--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,15 @@
 [build]
   publish = "."
   
+[[redirects]]
+  from = "/*"
+  to = "/simple.html"
+  status = 200
+  
 [[headers]]
   for = "/*"
   [headers.values]
-    Cache-Control = "no-cache, no-store, must-revalidate, max-age=0"
-    Pragma = "no-cache"
-    Expires = "0"
+    Cache-Control = "no-cache"
 
 [[headers]]
   for = "*.html"
