NO-BUILD v2025010318 - Bypass total do sistema de build

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,13 @@
 [build]
   publish = "."
-  
+  command = ""
+  ignore = "exit 0"
+
+[build.environment]
+  SKIP_INSTALL = "true"
+  DISABLE_YARN = "true"
+  DISABLE_NPM = "true"
+
 [[redirects]]
   from = "/*"
   to = "/simple.html"
